samples/_failures_safe/1761215384_a2ee3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_623e32c1.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_623e32c1.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_623e32c1.c:163:9: error: expected declaration or statement at end of input
